# tomviz-superbuild

./: CMakeLists.txt  CTestConfig.cmake  Generating_ITK_binaries.md  README.md  versions.cmake
.github/scripts/: create_nightly_date.sh  delete_nightly_release.sh  prepare_release.sh  rename_packages_to_latest.sh
.github/workflows/: build.yml
.github/workflows/docker/centos7/: Dockerfile  install_cmake.sh  install_deps.sh  install_qt.sh
cmake/: DetermineTomVizVersion.cmake  DetermineTomvizVersion.cmake  PVExternalProject.cmake  ParaViewModules.cmake  SuperbuildAddProjectPython.cmake  SuperbuildInstallMacros.cmake  pep_configure.cmake.in
cmake/scripts/: fixup_bundle.apple.py  fixup_python.apple.cmake
docker/debian/: Dockerfile  install_deps.sh
docs/release/: README.md  generate_sha_sums.py
docs/release/notarization/: README.md  post-notarization.tomviz  sign.bash.tomviz
itk-binaries/linux/: Dockerfile  install_cmake.sh  make_itk_bundle.sh
itk-binaries/osx/: make_itk_bundle_osx.sh
projects/: cython.cmake  ffmpeg.cmake  fftw.cmake  fftw3double.cmake  fftw3float.cmake  fftw3long.cmake  fftw3quad.cmake  h5py.cmake  hdf5.cmake  hdf5.system.cmake  holoplay.cmake  holoplay.install.cmake  itk.cmake  itk.install.cmake  jsonpatch.cmake  jsonpointer.cmake  lapack.cmake  lapack.use.system.cmake  libxml2.cmake  libxml2.use.system.cmake  marshmallow.cmake  matviz.bundle.common.cmake  matviz.cmake  numpy.cmake  numpy.common.cmake  numpy.install  paraview.cmake  pkgconfig.cmake  png.cmake  png.use.system.cmake  pyfftw.cmake  pygments.cmake  python.cmake  python.use.system.cmake  qt.cmake  qt.use.system.cmake  scipy.cmake  scipy.common.cmake  six.cmake  tbb.common.cmake  (+8 more)
projects/apple/: fixup_bundle.py  fixup_bundle_for_mountain_lion2.py  fixup_itk.py  itk_list.cmake  matviz.bundle.cmake  numpy.cmake  scipy.cmake  tbb.cmake  tem.bundle.cmake  tomviz.bundle.cmake
projects/apple-unix/: freetype.cmake  freetype.use.system.cmake
projects/apple/files/: CMakeDMGSetup.scpt
projects/patches/: hdf5-fix-ext-pkg-find.patch  qt.src.gui.kernel.qeventdispatcher_mac.mm  qt.src.plugins.bearer.corewlan.corewlan.pro  zlib.CMakeLists.txt
projects/patches/python3.7/macos/: configure.ac.patch  configure.patch
projects/unix/: fontconfig.cmake  install_dependencies.cmake  matviz.bundle.cmake  numpy.cmake  scipy.cmake  tbb.cmake  tem.bundle.cmake  tomviz.bundle.cmake
projects/win32/: BuildFFMPEG.md  BuildPyFFTW.md  WIX.template.in  cpack_config_file.cmake.in  ffmpeg.build.sh  ffmpeg.cmake  fftw.cmake  fftw.install.cmake  hdf5.cmake  intelredist.cmake  intelredist.install.cmake  lapack.cmake  matviz.bundle.cmake  numpy.cmake  numpy.install.cmake  pyfftw.cmake  pyfftw.install.cmake  python.cmake  python.install.cmake  qt.cmake  qt.use.system.cmake  scipy.cmake  scipy.install.cmake  tbb.cmake  tem.bundle.cmake  tomviz.bundle.cmake  zlib.cmake
projects/win32/patches/: hdf5-msvc-non-vs-generator.patch  hdf5-vs2015-support.patch
